RESOLVED FIXED75436
Fix chromium mac build after r103905
https://bugs.webkit.org/show_bug.cgi?id=75436
Summary Fix chromium mac build after r103905
Caio Marcelo de Oliveira Filho
Reported 2012-01-02 07:31:40 PST
Fix chromium mac build after r103905
Attachments
Patch (1.66 KB, patch)
2012-01-02 07:32 PST, Caio Marcelo de Oliveira Filho
ossy: review+
Caio Marcelo de Oliveira Filho
Comment 1 2012-01-02 07:32:44 PST
Csaba Osztrogonác
Comment 2 2012-01-02 07:35:44 PST
Comment on attachment 120880 [details] Patch Clang is true expression is not assignable. :) LGTM, r=me.
Caio Marcelo de Oliveira Filho
Comment 3 2012-01-02 07:39:43 PST
Note You need to log in before you can comment on or make changes to this bug.