Fix chromium mac build after r103905 https://bugs.webkit.org/show_bug.cgi?id=75436

Reviewed by Csaba Osztrogonác.

Adding parenthesis to disambiguate because clang gives error
"expression is not assignable".

* rendering/svg/RenderSVGResourceGradient.cpp:
(WebCore::RenderSVGResourceGradient::applyResource):

Canonical link: https://commits.webkit.org/92205@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@103907 268f45cc-cd09-0410-ab3c-d52691b4dbfc